fix whitespace on large featured story in Top Stories

--- a/themes/news/less/_base-responsive.less
+++ b/themes/news/less/_base-responsive.less
@@ -261,6 +261,15 @@ body.nav-6 #nav-6 a {
   border-bottom: 2px solid @su-red;
 }
 
+.card {
+  &.full {
+    .h3           { font-size: 3em;   }
+    .category     { font-size: 1.2em; }
+    .teaser       { font-size: 1.3em; }
+    .card-content { padding:   2.4em; }
+  }
+}
+
 } // @media (min-width: @screen-md-min)
 
 
